@@ -3,39 +3,57 @@ package com.cardio_generator.outputs;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.concurrent.ConcurrentHashMap;
 
-public class fileOutputStrategy implements OutputStrategy {
+/**
+ * The FileOutputStrategy class represents an output strategy that writes data to files.
+ * It implements the OutputStrategy interface.
+ */
+public class FileOutputStrategy implements OutputStrategy {
 
-    private String BaseDirectory;
+    private String baseDirectory; // The base directory where files will be created
 
-    public final ConcurrentHashMap<String, String> file_map = new ConcurrentHashMap<>();
+    // A ConcurrentHashMap to store file paths based on label
+    public final ConcurrentHashMap<String, String> fileMap = new ConcurrentHashMap<>();
 
-    public fileOutputStrategy(String baseDirectory) {
-
-        this.BaseDirectory = baseDirectory;
+    /**
+     * Constructs a FileOutputStrategy object with the specified base directory.
+     * 
+     * @param baseDirectory The base directory where files will be created.
+     */
+    public FileOutputStrategy(String baseDirectory) {
+        this.baseDirectory = baseDirectory;
     }
 
+    /**
+     * Outputs the specified data for the patient to a file.
+     * 
+     * @param patientId The ID of the patient.
+     * @param timestamp The timestamp of the data.
+     * @param label     The label or type of the data.
+     * @param data      The actual data to be outputted.
+     */
     @Override
     public void output(int patientId, long timestamp, String label, String data) {
         try {
-            // Create the directory
-            Files.createDirectories(Paths.get(BaseDirectory));
+            // Create the directory if it doesn't exist
+            Files.createDirectories(Paths.get(baseDirectory));
         } catch (IOException e) {
             System.err.println("Error creating base directory: " + e.getMessage());
             return;
         }
-        // Set the FilePath variable
-        String FilePath = file_map.computeIfAbsent(label, k -> Paths.get(BaseDirectory, label + ".txt").toString());
+
+        // Compute the file path based on the label
+        String filePath = fileMap.computeIfAbsent(label, k -> Paths.get(baseDirectory, label + ".txt").toString());
 
         // Write the data to the file
         try (PrintWriter out = new PrintWriter(
-                Files.newBufferedWriter(Paths.get(FilePath), StandardOpenOption.CREATE, StandardOpenOption.APPEND))) {
+                Files.newBufferedWriter(Path.of(filePath), StandardOpenOption.CREATE, StandardOpenOption.APPEND))) {
             out.printf("Patient ID: %d, Timestamp: %d, Label: %s, Data: %s%n", patientId, timestamp, label, data);
-        } catch (Exception e) {
-            System.err.println("Error writing to file " + FilePath + ": " + e.getMessage());
+        } catch (IOException e) {
+            System.err.println("Error writing to file " + filePath + ": " + e.getMessage());
         }
     }
 }
